--- a/webapp/src/main/resources/reports/province_top.jrxml
+++ b/webapp/src/main/resources/reports/province_top.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProvinceTopBarChart" language="groovy" pageWidth="550" pageHeight="892" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProvinceTopBarChart" language="groovy" pageWidth="550" pageHeight="892" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true" uuid="6d01c598-57af-4925-8c2d-1d2ae9259d1f">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -31,45 +31,53 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<subDataset name="ProvinceTop3">
+	<subDataset name="ProvinceTop3" uuid="db7e3fbd-f4a7-4deb-aaea-7716bfb53edc">
 		<parameter name="cal" class="java.util.Calendar" isForPrompting="false">
 			<defaultValueExpression><![CDATA[Calendar.getInstance()]]></defaultValueExpression>
 		</parameter>
 		<parameter name="end_date" class="java.util.Date">
 			<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
 		</parameter>
-		<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
+		<parameter name="this_month" class="java.util.Date" isForPrompting="false">
 			<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -3) ||
     $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
 )
 ? null : $P{cal}.getTime()]]></defaultValueExpression>
 		</parameter>
 		<queryString>
 			<![CDATA[SELECT
-`sub_district_short_name`
-`district_short_name`,
- `Province_Short_Name`,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `infection_control_rating` else 0 end), 2) as infection_control_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating,
-round((
+`province_short_name`,
+`staff_attitude_rating`,
+`cleanliness_rating`,
+`waiting_times_rating`,
+`drug_availability_rating`,
+`infection_control_rating`,
+`safe_and_secure_care_rating`,
+round(((
     staff_attitude_rating +
 cleanliness_rating +
 waiting_times_rating +
 drug_availability_rating +
 infection_control_rating +
-safe_and_secure_care_rating)/6,2) as Average
- FROM `data_mart_rating`
- group by `Province_short_name`
-order by Average Desc
- limit 3;]]>
+safe_and_secure_care_rating)/6),2) as Average
+FROM
+	(SELECT
+      `province_short_name`,
+	  round(AVG(case when`staff_attitude_rating`= null then 0 else `staff_attitude_rating` end), 2) as staff_attitude_rating,
+round(AVG( case when `cleanliness_rating`= null then 0 else `cleanliness_rating` end), 2) as cleanliness_rating,
+round(AVG( case when`waiting_times_rating`= null then 0 else `waiting_times_rating` end), 2) as waiting_times_rating,
+round(AVG( case when `drug_availability_rating`= null then 0 else `drug_availability_rating` end), 2) as drug_availability_rating,
+round(AVG( case when`infection_control_rating` = null then 0 else `infection_control_rating` end), 2) as infection_control_rating,
+round(AVG( case when `safe_and_secure_care_rating`= null then 0 else `safe_and_secure_care_rating` end), 2) as safe_and_secure_care_rating
+FROM data_mart_rating
+WHERE submission_date BETWEEN $P{this_month} AND $P{end_date}
+GROUP BY `province_short_name`
+     )
+As Data
+ORDER BY Average DESC
+limit 3;]]>
 		</queryString>
-		<field name="district_short_name" class="java.lang.String"/>
 		<field name="Province_Short_Name" class="java.lang.String"/>
 		<field name="staff_attitude_rating" class="java.lang.Double"/>
 		<field name="cleanliness_rating" class="java.lang.Double"/>
@@ -85,34 +93,45 @@ order by Average Desc
 	<parameter name="end_date" class="java.util.Date">
 		<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
 	</parameter>
-	<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
+	<parameter name="this_month" class="java.util.Date" isForPrompting="false">
 		<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -3) ||
     $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
 )
 ? null : $P{cal}.getTime()]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT
- `Province_Short_Name`,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `infection_control_rating` else 0 end), 2) as infection_control_rating,
-round(AVG( case when submission_date BETWEEN $P{first_three_month}  AND $P{end_date}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating,
-round((
+`province_short_name`,
+`staff_attitude_rating`,
+`cleanliness_rating`,
+`waiting_times_rating`,
+`drug_availability_rating`,
+`infection_control_rating`,
+`safe_and_secure_care_rating`,
+round(((
     staff_attitude_rating +
 cleanliness_rating +
 waiting_times_rating +
 drug_availability_rating +
 infection_control_rating +
-safe_and_secure_care_rating)/6,2) as Average
- FROM `data_mart_rating`
- group by `Province_short_name`
-order by Average Desc
- limit 3;]]>
+safe_and_secure_care_rating)/6),2) as Average
+FROM
+	(SELECT
+      `province_short_name`,
+	  round(AVG(case when`staff_attitude_rating`= null then 0 else `staff_attitude_rating` end), 2) as staff_attitude_rating,
+round(AVG( case when `cleanliness_rating`= null then 0 else `cleanliness_rating` end), 2) as cleanliness_rating,
+round(AVG( case when`waiting_times_rating`= null then 0 else `waiting_times_rating` end), 2) as waiting_times_rating,
+round(AVG( case when `drug_availability_rating`= null then 0 else `drug_availability_rating` end), 2) as drug_availability_rating,
+round(AVG( case when`infection_control_rating` = null then 0 else `infection_control_rating` end), 2) as infection_control_rating,
+round(AVG( case when `safe_and_secure_care_rating`= null then 0 else `safe_and_secure_care_rating` end), 2) as safe_and_secure_care_rating
+FROM data_mart_rating
+WHERE submission_date BETWEEN $P{this_month} AND $P{end_date}
+GROUP BY `province_short_name`
+     )
+As Data
+ORDER BY Average DESC
+limit 3;]]>
 	</queryString>
 	<field name="Province_Short_Name" class="java.lang.String"/>
 	<field name="staff_attitude_rating" class="java.lang.Double"/>
@@ -128,20 +147,19 @@ order by Average Desc
 	<columnHeader>
 		<band height="205">
 			<staticText>
-				<reportElement style="Subreport_H2" x="0" y="-20" width="509" height="20"/>
-				<textElement/>
+				<reportElement style="Subreport_H2" x="0" y="-20" width="509" height="20" uuid="dd2564d7-674b-4400-9f76-4decb13130a4"/>
 				<text><![CDATA[Best Performing Provinces This Month]]></text>
 			</staticText>
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="0" y="0" width="509" height="100">
+					<reportElement x="0" y="0" width="509" height="100" uuid="04992db3-a705-44d6-8f1b-5270d02dff0b">
 						<property name="net.sf.jasperreports.chart.range.axis.tick.interval" value="1"/>
 					</reportElement>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend position="Top">
-                        <font size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
-                    </chartLegend>
+						<font size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					</chartLegend>
 				</chart>
 				<categoryDataset>
 					<categorySeries>
@@ -184,23 +202,29 @@ order by Average Desc
 				<barPlot>
 					<plot/>
 					<itemLabel/>
-					<rangeAxisMinValueExpression>0</rangeAxisMinValueExpression>
-                    <rangeAxisMaxValueExpression>4</rangeAxisMaxValueExpression>
+					<categoryAxisFormat>
+						<axisFormat/>
+					</categoryAxisFormat>
+					<valueAxisFormat>
+						<axisFormat/>
+					</valueAxisFormat>
+					<rangeAxisMinValueExpression><![CDATA[0]]></rangeAxisMinValueExpression>
+					<rangeAxisMaxValueExpression><![CDATA[4]]></rangeAxisMaxValueExpression>
 				</barPlot>
 			</barChart>
 			<componentElement>
-				<reportElement isPrintRepeatedValues="false" x="0" y="100" width="510" height="105" isRemoveLineWhenBlank="true"/>
-				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="ProvinceTop3">
+				<reportElement isPrintRepeatedValues="false" x="0" y="100" width="510" height="105" isRemoveLineWhenBlank="true" uuid="818a2c6f-a1cb-4fa4-a2d2-35693e9244e5"/>
+				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" whenNoDataType="AllSectionsNoDetail">
+					<datasetRun subDataset="ProvinceTop3" uuid="47dc6e96-34fc-4dd8-a18a-6ec683a95fbd">
 						<datasetParameter name="end_date">
 							<datasetParameterExpression><![CDATA[$P{end_date}]]></datasetParameterExpression>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="290">
+					<jr:column width="290" uuid="d05cf1f6-a8ab-44c9-8357-e01bcf5b8180">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="290" height="75"/>
+								<reportElement x="0" y="0" width="290" height="75" uuid="a6b5d2ba-cd26-4d3f-9ce7-f57af0dc4d83"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
@@ -210,17 +234,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="290" height="15"/>
+								<reportElement x="0" y="0" width="290" height="15" uuid="32724028-c38c-4781-b01b-715d68cd42d8"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{Province_Short_Name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="078292aa-af7c-45d5-a9e9-a3ced564ca95">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="f1cf9dbd-9498-4787-82b4-f936d0a8ab80"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -230,17 +253,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="f5cba4c0-b7f0-45db-b412-0ce7f258015b"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{staff_attitude_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="d8dc9609-ccec-4cd7-8b4a-82ad80c5ec5f">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="43c952e6-ffb0-49bb-b2f4-66e3ac141694"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -250,17 +272,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="ec4734a2-fa9a-4a67-8921-e8c94f0bab87"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{cleanliness_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="752b3bc0-509c-46fc-ad4f-c8085b7d0cf9">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="7ef3e6b9-2a5c-4047-968e-2b702108d1dd"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -270,17 +291,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="fe22e12a-6dca-49f9-a21f-f87eb1ac002d"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{waiting_times_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="b9295201-ddc8-437c-a617-183c7f2a9445">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="08afd4ea-8606-45c1-b8cc-de4b8cfc7361"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -290,17 +310,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="0b361e4c-b0ee-4112-a1d5-02dc5188818e"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{drug_availability_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="c783d440-928f-4bfa-a3f7-427a56978bdb">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="0c03fefd-19cd-4019-b3d5-e57073bef2a8"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -310,17 +329,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="349790c6-e29a-42b7-8091-fbc607b054cf"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{infection_control_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="28">
+					<jr:column width="28" uuid="b5c0774b-fe47-413e-93b3-b0f96f7d9931">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="28" height="75"/>
+								<reportElement x="0" y="0" width="28" height="75" uuid="1ef18184-5b23-46b4-b9d8-f9610e63876a"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -330,17 +348,16 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="15"/>
+								<reportElement x="0" y="0" width="28" height="15" uuid="471c7f12-5fc6-4dd9-a3e3-9b247fdfc7d7"/>
 								<box leftPadding="2"/>
-								<textElement/>
 								<textFieldExpression><![CDATA[$F{safe_and_secure_care_rating}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="48">
+					<jr:column width="48" uuid="133eb821-3e50-472f-83df-02437ee16fa8">
 						<jr:columnHeader style="Table_CH" height="75" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="48" height="75"/>
+								<reportElement x="0" y="0" width="48" height="75" uuid="d04ba3af-93ee-48c5-a6a4-647f56f5afc2"/>
 								<box leftPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -350,7 +367,7 @@ order by Average Desc
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="48" height="15"/>
+								<reportElement x="0" y="0" width="48" height="15" uuid="8da76f79-bd7d-42ab-a12a-b3914f9516af"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
