--- a/webapp/src/main/resources/reports/facility_top_ten.jrxml
+++ b/webapp/src/main/resources/reports/facility_top_ten.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FacilityTopTenMonthlyTable" language="groovy" pageWidth="550" pageHeight="892" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FacilityTopTenMonthlyTable" language="groovy" pageWidth="550" pageHeight="892" whenNoDataType="AllSectionsNoDetail" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true" uuid="919d6f80-4690-4dc5-92b6-dc13e5d0bd71">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -30,45 +30,71 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<subDataset name="DistrictTopTenMonthlyDS" whenResourceMissingType="Empty">
+	<subDataset name="DistrictTopTenMonthlyDS" whenResourceMissingType="Empty" uuid="c7e96f35-4718-4849-9907-7645974e7f04">
 		<parameter name="first_of_this_month" class="java.util.Date"/>
 		<parameter name="end_date" class="java.util.Date"/>
 		<parameter name="dist_short_name" class="java.lang.String"/>
 		<parameter name="province_short_name" class="java.lang.String"/>
-		<queryString language="SQL">
+		<queryString>
 			<![CDATA[SELECT
 `clinic_short_name` ,
 count( `clinic_short_name` ) as number_of_responses,
-round( AVG( `staff_attitude_rating` ) , 2 ) AS staff_attitude_rating,
-round( AVG( `cleanliness_rating` ) , 2 ) AS cleanliness_rating,
-round( AVG( `waiting_times_rating` ) , 2 ) AS waiting_times_rating,
-round( AVG( `drug_availability_rating` ) , 2 ) AS drug_availability_rating,
-round( AVG( `infection_control_rating` ) , 2 ) AS infection_control_rating,
-round( AVG( `safe_and_secure_care_rating` ) , 2 ) AS safe_and_secure_care_rating,
-round((
-staff_attitude_rating +
+`staff_attitude_rating`,
+`cleanliness_rating`,
+`waiting_times_rating`,
+`drug_availability_rating`,
+`infection_control_rating`,
+`safe_and_secure_care_rating`,
+round(((
+    staff_attitude_rating +
 cleanliness_rating +
 waiting_times_rating +
 drug_availability_rating +
 infection_control_rating +
-safe_and_secure_care_rating)/6, 2) AS Average
-FROM `data_mart_rating`
-
+safe_and_secure_care_rating)/6),2) as Average
+FROM
+	(SELECT
+      `clinic_short_name` ,
+count( `clinic_short_name` ) as number_of_responses,
+round(AVG(case when`staff_attitude_rating`= null then 0 else `staff_attitude_rating` end), 2) as staff_attitude_rating,
+round(AVG( case when `cleanliness_rating`= null then 0 else `cleanliness_rating` end), 2) as cleanliness_rating,
+round(AVG( case when`waiting_times_rating`= null then 0 else `waiting_times_rating` end), 2) as waiting_times_rating,
+round(AVG( case when `drug_availability_rating`= null then 0 else `drug_availability_rating` end), 2) as drug_availability_rating,
+round(AVG( case when`infection_control_rating` = null then 0 else `infection_control_rating` end), 2) as infection_control_rating,
+round(AVG( case when `safe_and_secure_care_rating`= null then 0 else `safe_and_secure_care_rating` end), 2) as safe_and_secure_care_rating
+FROM data_mart_rating
 WHERE `province_short_name`  like  $P{province_short_name}
 AND `district_short_name` like $P{dist_short_name}
- AND submission_date BETWEEN  $P{first_of_this_month} AND $P{end_date}
+AND submission_date BETWEEN  $P{first_of_this_month} AND $P{end_date}
+GROUP BY `clinic_short_name`
+     )
+As Data
 GROUP BY `clinic_short_name`
 Order BY Average DESC
 limit 10]]>
 		</queryString>
-		<field name="clinic_short_name" class="java.lang.String"/>
+		<field name="clinic_short_name" class="java.lang.String">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
 		<field name="number_of_responses" class="java.lang.Long"/>
-		<field name="staff_attitude_rating" class="java.lang.Double"/>
-		<field name="cleanliness_rating" class="java.lang.Double"/>
-		<field name="waiting_times_rating" class="java.lang.Double"/>
-		<field name="drug_availability_rating" class="java.lang.Double"/>
-		<field name="infection_control_rating" class="java.lang.Double"/>
-		<field name="safe_and_secure_care_rating" class="java.lang.Double"/>
+		<field name="staff_attitude_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="cleanliness_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="waiting_times_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="drug_availability_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="infection_control_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="safe_and_secure_care_rating" class="java.lang.Double">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
 		<field name="Average" class="java.lang.Double"/>
 	</subDataset>
 	<parameter name="cal" class="java.util.Calendar" isForPrompting="false">
@@ -87,7 +113,7 @@ limit 10]]>
 	</parameter>
 	<parameter name="dist_short_name" class="java.lang.String"/>
 	<parameter name="province_short_name" class="java.lang.String"/>
-	<queryString language="SQL">
+	<queryString>
 		<![CDATA[select now()]]>
 	</queryString>
 	<field name="now()" class="java.sql.Timestamp"/>
@@ -97,16 +123,16 @@ limit 10]]>
 	<columnHeader>
 		<band height="105">
 			<staticText>
-				<reportElement x="0" y="-20" width="370" height="20"/>
+				<reportElement x="0" y="-20" width="370" height="20" uuid="7cc78d10-81b7-4e0c-828b-3f977404fd12"/>
 				<textElement>
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Top 10 Performing Facilities This Month]]></text>
 			</staticText>
 			<componentElement>
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="510" height="105"/>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="510" height="105" uuid="8bee7179-53e8-4e55-a05b-c284b58a2a76"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" whenNoDataType="AllSectionsNoDetail">
-					<datasetRun subDataset="DistrictTopTenMonthlyDS">
+					<datasetRun subDataset="DistrictTopTenMonthlyDS" uuid="4c6fe354-5582-470c-bede-075466685ea1">
 						<datasetParameter name="first_of_this_month">
 							<datasetParameterExpression><![CDATA[$P{first_of_this_month}]]></datasetParameterExpression>
 						</datasetParameter>
@@ -121,10 +147,10 @@ limit 10]]>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="290">
+					<jr:column width="290" uuid="fdd66aa9-a9af-4715-98d3-225c069b22bd">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="290" height="90"/>
+								<reportElement x="0" y="0" width="290" height="90" uuid="e5dab329-efd4-46c4-9ba6-4c60cb4d5581"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
@@ -134,7 +160,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="290" height="15"/>
+								<reportElement x="0" y="0" width="290" height="15" uuid="7ff90a58-94b3-4104-8a74-eac121255e33"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -143,10 +169,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="9e5bc928-743a-42e5-9add-498402f5bfbf">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="4886337e-cb54-4782-a2cc-2d008b400de9"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -157,7 +183,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="86fb6fd3-20b5-444b-aa1c-5eb1e5091c96"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -166,10 +192,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="d1ec4c9d-9202-4211-a1b9-414706df6a25">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="ff56d569-8f88-4c26-b555-2fd5fea80262"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -180,7 +206,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="f4cb6699-e94a-4ce5-aaad-77481689d3b4"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -189,10 +215,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="dd5daf1b-67b4-42d4-817f-96779dd969b9">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="fdcb0dcb-8983-49e8-9f14-248db36b6413"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -203,7 +229,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="8ec45096-263e-412a-a46a-86d2a894a4c1"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -212,10 +238,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="3eb958ae-7071-4d91-8ca2-09e183058735">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="8e35ff43-1df3-498f-82c5-af4350cf3da4"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -226,7 +252,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="3aa0b5b5-a35c-4459-94cd-842530e5eab9"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -235,10 +261,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="9b02af38-a15c-4e81-b8e4-4d6fb730189c">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="c301fabe-f573-44cb-926a-31ea82a03095"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -249,7 +275,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="a441312d-5ec5-4ed4-8950-130cb214e742"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -258,10 +284,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="b994f32b-047c-4bd9-993b-dde2a2935708">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="07145d35-bb65-47da-bcad-6f26d21a11af"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -272,7 +298,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="4ec8e2b9-3b1a-4fdd-b420-c04ea59757a5"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -281,10 +307,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="25">
+					<jr:column width="25" uuid="455df91b-9ad2-42c0-9e18-40bc9a9d9604">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="25" height="90"/>
+								<reportElement x="0" y="0" width="25" height="90" uuid="b243f9ad-646d-4426-b342-ee5b8d6802c6"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -295,7 +321,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="25" height="15"/>
+								<reportElement x="0" y="0" width="25" height="15" uuid="af77245d-1590-4ff6-ab76-eff646fe99ff"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="false"/>
@@ -304,10 +330,10 @@ limit 10]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="48">
+					<jr:column width="48" uuid="fbe445bb-1520-4319-8658-c9c9e93f4f33">
 						<jr:columnHeader style="Table_CH" height="90">
 							<staticText>
-								<reportElement x="0" y="0" width="48" height="90"/>
+								<reportElement x="0" y="0" width="48" height="90" uuid="3405082e-b0e9-47d1-ae44-73d70f71133b"/>
 								<box topPadding="2"/>
 								<textElement rotation="Right">
 									<font isBold="true"/>
@@ -318,7 +344,7 @@ limit 10]]>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="15">
 							<textField>
-								<reportElement x="0" y="0" width="48" height="15"/>
+								<reportElement x="0" y="0" width="48" height="15" uuid="2b7291bc-144d-41a3-ac01-e1f0b53b9271"/>
 								<box leftPadding="2"/>
 								<textElement>
 									<font isBold="true"/>
