--- a/webapp/src/main/resources/reports/province_three_month_barchart.jrxml
+++ b/webapp/src/main/resources/reports/province_three_month_barchart.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProvinceThreeMonthBarChart" language="groovy" pageWidth="550" pageHeight="842" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="10" bottomMargin="10" whenResourceMissingType="Empty" isIgnorePagination="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ProvinceThreeMonthBarChart" language="groovy" pageWidth="550" pageHeight="842" columnWidth="510" leftMargin="20" rightMargin="20" topMargin="10" bottomMargin="10" whenResourceMissingType="Empty" isIgnorePagination="true" uuid="eb304b31-a6fc-4089-b23f-25299209d6bd">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -13,9 +13,18 @@
 	<parameter name="first_first_month" class="java.util.Date" isForPrompting="false">
 		<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
+    $P{cal}.add(Calendar.MONTH, -1) ||
     $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
 )
 ? null : $P{cal}.getTime()]]></defaultValueExpression>
+	</parameter>
+	<parameter name="end_first_month" class="java.util.Date" isForPrompting="false">
+		<defaultValueExpression><![CDATA[(
+            $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
+            $P{cal}.add(Calendar.MONTH, -1) ||
+            $P{cal}.set(Calendar.DAY_OF_MONTH, $P{cal}.getActualMaximum(Calendar.DAY_OF_MONTH))
+            )
+            ? null : $P{cal}.getTime()]]></defaultValueExpression>
 	</parameter>
 	<parameter name="first_month_name" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[$P{first_first_month}.getMonth() == 0 ?    "January" :
@@ -35,10 +44,18 @@ $P{first_first_month}.getMonth() == 11 ?    "December" :
 	<parameter name="first_second_month" class="java.util.Date" isForPrompting="false">
 		<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -1) ||
+    $P{cal}.add(Calendar.MONTH, -2) ||
     $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
 )
 ? null : $P{cal}.getTime()]]></defaultValueExpression>
+	</parameter>
+	<parameter name="end_second_month" class="java.util.Date" isForPrompting="false">
+		<defaultValueExpression><![CDATA[(
+            $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
+            $P{cal}.add(Calendar.MONTH, -2) ||
+            $P{cal}.set(Calendar.DAY_OF_MONTH, $P{cal}.getActualMaximum(Calendar.DAY_OF_MONTH))
+            )
+            ? null : $P{cal}.getTime()]]></defaultValueExpression>
 	</parameter>
 	<parameter name="second_month_name" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[$P{first_second_month}.getMonth() == 0 ?    "January" :
@@ -55,27 +72,35 @@ $P{first_second_month}.getMonth() == 10 ?    "November"  :
 $P{first_second_month}.getMonth() == 11 ?    "December" :
 "Unknown"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="first_three_month" class="java.util.Date" isForPrompting="false">
+	<parameter name="first_third_month" class="java.util.Date" isForPrompting="false">
 		<defaultValueExpression><![CDATA[(
     $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
-    $P{cal}.add(Calendar.MONTH, -2) ||
+    $P{cal}.add(Calendar.MONTH, -3) ||
     $P{cal}.set(Calendar.DAY_OF_MONTH, 1)
 )
 ? null : $P{cal}.getTime()]]></defaultValueExpression>
 	</parameter>
+	<parameter name="end_third_month" class="java.util.Date" isForPrompting="false">
+		<defaultValueExpression><![CDATA[(
+            $P{cal}.set($P{end_date}.getYear()+1900, $P{end_date}.getMonth(), $P{end_date}.getDate()) ||
+            $P{cal}.add(Calendar.MONTH, -3) ||
+            $P{cal}.set(Calendar.DAY_OF_MONTH, $P{cal}.getActualMaximum(Calendar.DAY_OF_MONTH))
+            )
+            ? null : $P{cal}.getTime()]]></defaultValueExpression>
+	</parameter>
 	<parameter name="third_month_name" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[$P{first_three_month}.getMonth() == 0 ?    "January" :
-$P{first_three_month}.getMonth() == 1 ?    "February" :
-$P{first_three_month}.getMonth() == 2 ?    "March" :
-$P{first_three_month}.getMonth() == 3 ?    "April" :
-$P{first_three_month}.getMonth() == 4 ?    "May" :
-$P{first_three_month}.getMonth() == 5 ?    "June" :
-$P{first_three_month}.getMonth() == 6 ?    "July" :
-$P{first_three_month}.getMonth() == 7 ?    "August" :
-$P{first_three_month}.getMonth() == 8 ?    "September" :
-$P{first_three_month}.getMonth() == 9 ?    "October"  :
-$P{first_three_month}.getMonth() == 10 ?    "November"  :
-$P{first_three_month}.getMonth() == 11 ?    "December" :
+		<defaultValueExpression><![CDATA[$P{first_third_month}.getMonth() == 0 ?    "January" :
+$P{first_third_month}.getMonth() == 1 ?    "February" :
+$P{first_third_month}.getMonth() == 2 ?    "March" :
+$P{first_third_month}.getMonth() == 3 ?    "April" :
+$P{first_third_month}.getMonth() == 4 ?    "May" :
+$P{first_third_month}.getMonth() == 5 ?    "June" :
+$P{first_third_month}.getMonth() == 6 ?    "July" :
+$P{first_third_month}.getMonth() == 7 ?    "August" :
+$P{first_third_month}.getMonth() == 8 ?    "September" :
+$P{first_third_month}.getMonth() == 9 ?    "October"  :
+$P{first_third_month}.getMonth() == 10 ?    "November"  :
+$P{first_third_month}.getMonth() == 11 ?    "December" :
 "Unknown"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -86,26 +111,26 @@ $P{first_three_month}.getMonth() == 11 ?    "December" :
 `sub_district_short_name`,
 `district_name`,
 `district_short_name`,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_onem,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_onem,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_onem,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_onem,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_onem,
-round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_date}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_onem,
+round(AVG( case when submission_date BETWEEN $P{first_first_month} AND $P{end_first_month}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_onem,
 
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_twom,
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_twom,
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_twom,
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_twom,
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_twom,
-round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_date}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_twom,
+round(AVG( case when submission_date BETWEEN $P{first_second_month} AND $P{end_second_month}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_twom,
 
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_threem,
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_threem,
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_threem,
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_threem,
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_threem,
-round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_date}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_threem
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `staff_attitude_rating` else 0 end), 2) as staff_attitude_rating_threem,
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `cleanliness_rating` else 0 end), 2) as cleanliness_rating_threem,
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `waiting_times_rating` else 0 end), 2) as waiting_times_rating_threem,
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `drug_availability_rating` else 0 end), 2) as drug_availability_rating_threem,
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `infection_control_rating` else 0 end), 2) as infection_control_rating_threem,
+round(AVG( case when submission_date BETWEEN $P{first_third_month} AND $P{end_third_month}  then `safe_and_secure_care_rating` else 0 end), 2) as safe_and_secure_care_rating_threem
  FROM `data_mart_rating`]]>
 	</queryString>
 	<field name="clinic_code" class="java.lang.String">
@@ -150,8 +175,7 @@ round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_da
 	<pageHeader>
 		<band height="20">
 			<staticText>
-				<reportElement style="Subreport_H2" x="0" y="0" width="515" height="20"/>
-				<textElement/>
+				<reportElement style="Subreport_H2" x="0" y="0" width="515" height="20" uuid="250d1cba-0c6f-48a8-99c1-6b7111b045ac"/>
 				<text><![CDATA[Overall performance (last 3 months)]]></text>
 			</staticText>
 		</band>
@@ -160,14 +184,14 @@ round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_da
 		<band height="151" splitType="Stretch">
 			<barChart>
 				<chart evaluationTime="Report">
-					<reportElement x="-1" y="0" width="516" height="150">
+					<reportElement x="-1" y="0" width="516" height="150" uuid="41f4f6a2-e336-4a8a-8cff-77ec85cdd61e">
 						<property name="net.sf.jasperreports.chart.range.axis.tick.interval" value="1"/>
 					</reportElement>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend position="Top">
-                        <font size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
-                    </chartLegend>
+						<font size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					</chartLegend>
 				</chart>
 				<categoryDataset>
 					<categorySeries>
@@ -282,8 +306,14 @@ round(AVG( case when submission_date BETWEEN $P{first_three_month} AND $P{end_da
 				<barPlot>
 					<plot/>
 					<itemLabel/>
-					<rangeAxisMinValueExpression>0</rangeAxisMinValueExpression>
-                    <rangeAxisMaxValueExpression>4</rangeAxisMaxValueExpression>
+					<categoryAxisFormat>
+						<axisFormat/>
+					</categoryAxisFormat>
+					<valueAxisFormat>
+						<axisFormat/>
+					</valueAxisFormat>
+					<rangeAxisMinValueExpression><![CDATA[0]]></rangeAxisMinValueExpression>
+					<rangeAxisMaxValueExpression><![CDATA[4]]></rangeAxisMaxValueExpression>
 				</barPlot>
 			</barChart>
 		</band>
